@@ -41,13 +41,12 @@ object EnvConfiguration {
   val ENGINE_CONN_CLASSPATH_FILES =
     CommonVars("wds.linkis.engineConn.files", "", "engineConn额外的配置文件")
 
-  val metaspaceSize = if (SystemUtils.isJavaVersionAtLeast(JavaVersion.JAVA_1_8)) {
-    "-XX:MaxMetaspaceSize=256m -XX:MetaspaceSize=128m"
-  } else {
-    "-XX:MaxPermSize=256m -XX:PermSize=128m"
-  }
+  val MAX_METASPACE_SIZE = CommonVars("linkis.engineconn.metaspace.size.max", "256m")
 
-  val ENGINE_CONN_DEFAULT_JAVA_OPTS = CommonVars[String](
+  lazy val metaspaceSize =
+    s"-XX:MaxMetaspaceSize=${MAX_METASPACE_SIZE.getValue} -XX:MetaspaceSize=128m"
+
+  lazy val ENGINE_CONN_DEFAULT_JAVA_OPTS = CommonVars[String](
     "wds.linkis.engineConn.javaOpts.default",
     s"-XX:+UseG1GC ${metaspaceSize} " +
       s"-Xloggc:%s -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Dwds.linkis.server.conf=linkis-engineconn.properties -Dwds.linkis.gateway.url=${Configuration.getGateWayURL()}"
